ListSelects now can be read-only or selectable-only.

This fixes a long-standing oddity that allowed one to add arbitrary
values to the computed categories "media type" and "folder", as well as
add arbitrary (i.e. non-single-letter) tags to the "tokens" category.

BUG: 423979