AnnotationDialog/enums.h
@@ -1,4 +1,4 @@
-/* Copyright (C) 2003-2010 Jesper K. Pedersen <blackie@kde.org>
+/* Copyright (C) 2003-2020 The KPhotoAlbum Development Team
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public
@@ -26,13 +26,19 @@ enum UsageMode { InputSingleImageConfigMode,
 enum MatchType { MatchFromBeginning,
                  MatchFromWordStart,
                  MatchAnywhere };
-// @short Distinguishes between user-induced changes to ResizableFrame and automatic ones.
-//
-// Manual changes are any ones that are in some way conscious by the user (e.g. setting the tag data).
-// Automatic changes suppress some signals (e.g. when setting a transient value).
+/** @short Distinguishes between user-induced changes to ResizableFrame and automatic ones.
+ *
+ * Manual changes are any ones that are in some way conscious by the user (e.g. setting the tag data).
+ * Automatic changes suppress some signals (e.g. when setting a transient value).
+ */
 enum ChangeOrigin { ManualChange,
                     AutomatedChange };
 }
+enum ListSelectEditMode {
+    ReadOnly, ///< values can not be changed
+    Selectable, ///< existing values can be (de)selected, but no value can be added or removed
+    Editable ///< values can be freely added, selected, and removed
+};
 
 #endif /* ENUMS_H */
 
